# buying-assistant

./: .env.example  .gitignore  GITHUB_SETUP.md  LICENSE  README.md  pyproject.toml
src/agent/: agent.py  buying_agent.py
src/api/: main.py
src/web/: app.js  cards-data.js  index.html  styles.css  test_links.html
